public class PizzeriaStrasbourg extends Pizzeria{


    /**
     * Constructeur
     *
     * @param fabrique
     */
    public PizzeriaStrasbourg(PizzaFactory fabrique) {
        super(fabrique);
    }
}
