@startuml

title __JAVA's Class Diagram__\n

    abstract class Pizza {
        # crust : String
        # garnitures : ArrayList<String>
        # name : String
        # sauce : String
        + ajoutGarn()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
        {abstract} ~ couper()
    }



    abstract class PizzaFactory {
        {abstract} ~ creerPizza()
    }




    class PizzaFactoryBrest {
        {static} - instance : PizzaFactoryBrest
        + creerPizza()
        {static} + getInstance()
        - PizzaFactoryBrest()
    }




    class PizzaFactoryStrasbourg {
        {static} - instance : PizzaFactoryStrasbourg
        + creerPizza()
        {static} + getInstance()
        - PizzaFactoryStrasbourg()
    }




    class PizzaFromageStyleBrest {
        + PizzaFromageStyleBrest()
        ~ couper()
    }




    class PizzaFromageStyleStrasbourg {
        + PizzaFromageStyleStrasbourg()
        ~ couper()
    }




    class PizzaGrecqueStyleBrest {
        + PizzaGrecqueStyleBrest()
        ~ couper()
    }




    class PizzaGrecqueStyleStrasbourg {
        + PizzaGrecqueStyleStrasbourg()
        ~ couper()
    }




    class PizzaPoivronsStyleBrest {
        + PizzaPoivronsStyleBrest()
        ~ couper()
    }




    class PizzaPoivronsStyleStrasbourg {
        + PizzaPoivronsStyleStrasbourg()
        ~ couper()
    }



    class PizzaTestDrive {
        {static} + main()
    }




    abstract class Pizzeria {
        + Pizzeria()
        + commanderPizza()
    }




    class PizzeriaBrest {
        + PizzeriaBrest()
    }




    class PizzeriaFactory {
        {static} - instance : PizzeriaFactory
        + creer()
        {static} + getInstance()
        - PizzeriaFactory()
    }




    class PizzeriaStrasbourg {
        + PizzeriaStrasbourg()
    }



  PizzaFactoryBrest --|> PizzaFactory
  PizzaFactoryStrasbourg --|> PizzaFactory
  PizzaFromageStyleBrest --|> Pizza
  PizzaFromageStyleStrasbourg --|> Pizza
  PizzaGrecqueStyleBrest --|> Pizza
  PizzaGrecqueStyleStrasbourg --|> Pizza
  PizzaPoivronsStyleBrest --|> Pizza
  PizzaPoivronsStyleStrasbourg --|> Pizza
  Pizzeria o-- PizzaFactory : fabrique
  PizzeriaBrest --|> Pizzeria
  PizzeriaFactory o-- Pizzeria : pizzeria
  PizzeriaStrasbourg --|> Pizzeria



@enduml
